Fix room index content overflows on y axis

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -30,7 +30,6 @@ ul {
 }
 
 body{
-  height: 100vh;
   overflow-x: hidden;
   font-family: "Lato", serif;
   font-weight: 400;
@@ -141,8 +140,6 @@ body{
   position: sticky;
   right: 0;
   bottom: 0;
-  padding: 0 15px;
-
   left: 0;
   z-index: 1;
 }
