--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -6,9 +6,9 @@
 
 #chatroom_container{
   flex: 1 1 auto;
+  max-height: calc(100vh - 15px);
 }
 .room-container{
-  padding-bottom: 50px;
   overflow-y: auto;
 }
 
